Fixed styling issue on organizer page with each mapped element not being aligned properly.

--- a/src/index.css
+++ b/src/index.css
@@ -310,7 +310,7 @@ textarea {
     cursor: pointer;
     padding-left: 2%;
     padding-top: 1%;
-    padding-bottom: 5%;
+    padding-bottom: 15px;
     margin-bottom: 1px;
     border-image-repeat: stretch;
     margin-top: 6px;
